--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     api 'androidx.fragment:fragment:1.3.0-alpha01'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     api "com.github.stephanenicolas.toothpick:toothpick-runtime:3.1.0"
     api "com.github.stephanenicolas.toothpick:smoothie:3.0.2"
